--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -11,9 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Project title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The group is composed of:\n",
-    "- Lucas Jean Emmanuel Gauvain - 13202421943\n",
-    "- Adinan Alves de Brito Filho - 11201920527"
+    "| Student                        | RA          |\n",
+    "| ----------------------------   | ----------- |\n",
+    "| Lucas Jean Emmanuel Gauvain    | 13202421943 |\n",
+    "| Adinan Alves de Brito Filho    | 11201920527 |\n",
+    "| Christopher de Oliveira Moura  | 12202432444 |\n",
+    "| João Pedro Sousa Santos        | 11202021260 |\n"
    ]
   },
   {
@@ -22,11 +33,51 @@
    "source": [
     "Add project description here"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Draft :\n",
+    "Tips (things to implement):\n",
+    "- classification\n",
+    "- clusterization\n",
+    "- optimization ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "https://lukmanaj.medium.com/exploring-breast-cancer-classification-logistic-regression-and-scikit-learn-in-action-1c94a3d9fe49"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
